SERVER-56147: In connection PoolForHost, a thread blocked waiting for free connection may be never notified